# NexusPad

./: .gitignore  README.md  UPDATE_NOTES.md  USB and 蓝牙功能落地方案.txt  USB_CONNECTION_GUIDE.md  apple_trackpad_algorithms_reference.md  haptic-feedback-guide.md  test_aoa_connection.ps1  开发计划.md  触控板技术深度研究报告.md
.github/workflows/: release.yml
app/: README.md  pubspec.yaml
app/android/: gradle.properties
app/android/app/: build.gradle.kts  proguard-rules.pro
app/assets/icons/: PS5 D-PAD_svgcode.txt  Xbox D-PAD_svgcode.txt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/codec/: frame_types.dart  tlv_codec.dart
app/lib/models/: control_mode.dart  gamepad_layout.dart  protocol.dart
app/lib/screens/: auth_screen.dart  connection_screen.dart  custom_gamepad_screen.dart  custom_layout_editor_screen.dart  custom_layout_list_screen.dart  gamepad_screen.dart  gamepad_select_screen.dart  home_screen.dart  qr_scan_screen.dart  settings_screen.dart  touchpad_screen.dart
app/lib/services/: ws_service.dart
app/lib/transport/: ble_channel.dart  transport.dart  usb_channel.dart  ws_channel.dart
app/lib/utils/: gesture_engine.dart  haptic.dart  neu_tokens.dart
app/lib/widgets/: gamepad_widgets.dart  top_bar.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
frontend/: app.js  index.html  pinyin-dict.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ble.rs  codec.rs  config.rs  debug_usb.rs  gamepad.rs  input.rs  lib.rs  protocol.rs  server.rs  usb.rs
src-tauri/src/platform/: windows.rs
src-tauri/ui/: dev-server.js  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/ui/iconfont/: iconfont.js
src-tauri/ui/src/: main.tsx
src-tauri/ui/src/app/: App.tsx
src-tauri/ui/src/app/components/: ModeSwitcher.tsx  PinButtonModule.tsx  SettingsPanel.tsx  StatusIndicator.tsx
tools/: gen_pinyin.js
(+11 files in other folders)
